<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/plain_logo"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:transitionName="logo_image" />

    <TextView
        android:id="@+id/signup_welcome"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_welcome"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        android:transitionName="logo_slogan" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="@string/signup_name"
            android:transitionName="email_tran"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/dark_gray"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/gray"
            app:endIconMode="clear_text"
            app:endIconTint="@color/gray"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                android:fontFamily="@font/poppins"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/email"
            android:layout_below="@id/name"
            android:hint="@string/signup_email"
            android:transitionName="email_tran"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/dark_gray"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/gray"
            app:endIconMode="clear_text"
            app:endIconTint="@color/gray"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                android:fontFamily="@font/poppins"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/phone"
            android:layout_below="@id/email"
            android:hint="@string/signup_phone"
            android:transitionName="password_tran"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/dark_gray"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/gray"
            app:endIconMode="clear_text"
            app:endIconTint="@color/gray"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                android:fontFamily="@font/poppins"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/password"
            android:layout_below="@id/phone"
            android:hint="@string/signup_password"
            android:transitionName="password_tran"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/dark_gray"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/gray"
            app:endIconTint="@color/gray"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/dark_green"
            android:fontFamily="@font/poppins_bold"
            android:onClick="registerUser"
            android:text="@string/signup_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:transitionName="signin_tran"
            app:rippleColor="@color/white" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signin_existing_user"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_bold"
            android:onClick="callSignIn"
            android:text="@string/signup_existing_user"
            android:textAllCaps="false"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:transitionName="signin_signup_tran"
            app:rippleColor="@color/dark_green" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_centerInParent="true"
            android:elevation="8dp"
            android:padding="50dp">


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@android:color/white"
                app:trackColor="@color/dark_green"
                app:trackThickness="4dp" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>